# homeassistant

./: .gitignore  CLAUDE.md  README.md  automations.yaml  configuration.yaml  renovate.json  secrets.example.yaml  ui-lovelace.yaml
.github/workflows/: tests.yml  validate.yml
docs/: presence-model.md
esphome/: seeed-esp32-poe-74dd44.yaml
scripts/: copy_floorplan_images.sh  push_config.sh
tests/: README.md  conftest.py  helpers.py  pyproject.toml  test_arrive_home.py  test_blind_spot.py  test_brief_transit.py  test_hallway_dwell.py  test_hallway_light_dwell.py  test_laundry_round_trip.py  test_leave_home.py  test_lr_daylight_gate.py  test_manual_override.py  test_motion_burst.py  test_presence_kill_switch.py  test_room_transitions.py
zigbee2mqtt/: configuration.yaml
